--- a/src/styles/bootstrap/_tables.scss
+++ b/src/styles/bootstrap/_tables.scss
@@ -71,7 +71,6 @@ $anchored-table-min-height: 375px !default;
 
 tr.cdk-row-expanded-details {
 	& > td {
-		padding-top: 0;
 		border-top: none;
 	}
 }
